fixed margins on mobile for blog

--- a/src/components/BlogPost/BlogPost.module.css
+++ b/src/components/BlogPost/BlogPost.module.css
@@ -91,7 +91,7 @@
   .inlineImage {
     float: none;
     max-width: 100%;
-    margin-right: 0;
     margin-bottom: 1rem;
+    margin-left: 0;
   }
 }
